solved problem with visibility head tag in a browser.

--- a/src/App.scss
+++ b/src/App.scss
@@ -1,12 +1,3 @@
-*,
-*:before,
-*:after {
-  display: block;
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
-
 .App {
   background-color: aquamarine;
   height: 100vh;
